--- a/incident.html
+++ b/incident.html
@@ -145,10 +145,10 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
   <label>Name of Witness (if applicable)</label>
   <input id="witnessName" name="witnessName">
 
-   <label>Contact Number</label>
+   <label>Witness Contact Number</label>
   <input type="number" id="witnessContact" name="witnessContact">
 
-  <label>Signature</label>
+  <label>Witness Signature</label>
   <canvas id="witnessSignPad" name="witnessSignPad"></canvas>
   
   <button type="button" class="secondary" onclick="clearWitnessSignature()">Clear Signature</button>
