--- a/aqcl.html
+++ b/aqcl.html
@@ -211,7 +211,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
   <div class="section">
   <label>LIst below actions you have taken or plan to take to rectify faults found</label>
-  <textarea id="actionsTaken"></textarea>
+  <textarea id="actionsTaken" data-maxchars="75"></textarea>
   </div>
   
 
