--- a/aqcl.html
+++ b/aqcl.html
@@ -95,16 +95,16 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>Appearance of guard on duty (comment)</label>
-  <input type="text" id="guardAppearance" data-maxchars="55" required>
+  <input type="text" id="guardAppearance" data-maxchars="45" required>
 
 
   <label>Appearance of guard desk / work area (comment)</label>
-  <input type="text" id="deskAppearance" data-maxchars="50" required>
+  <input type="text" id="deskAppearance" data-maxchars="40" required>
 
 
 
   <label>Does the guard have all relevant contact numbers?</label>
-  <input type="text" id="guardContact" data-maxchars="45" required>
+  <input type="text" id="guardContact" data-maxchars="38" required>
 </div>
 
 <div class="section">
@@ -126,7 +126,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>What changes have you made?</label>
-  <input type="text" id="changesMade" data-maxchars="63" required>
+  <input type="text" id="changesMade" data-maxchars="52" required>
 
 
   <label>Is security guard visually checking 10% of QR ID Cards for personal entering commercial premises </label>
@@ -144,11 +144,11 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>Supervisor name</label>
-  <input type="text" id="supervisorName" data-maxchars="26" required>
+  <input type="text" id="supervisorName" data-maxchars="19" required>
 
 
 
-  <label>How many upervisors Visited in the last 7 days?)</label>
+  <label>How many Supervisors Visited in the last 7 days?)</label>
   <input type="number" id="supervisors7Days" data-maxdigits="2" required>
 
 
@@ -170,7 +170,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>List keys audited</label>
-  <input type="text" id="keysAudited" data-maxchars="70" required>
+  <input type="text" id="keysAudited" data-maxchars="62" required>
 </div>
 
 <div class="section">
@@ -184,28 +184,28 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>How many cameras?</label>
-  <input type="number" id="numCameras" data-maxdigits="2" required>
+  <input type="number" id="numCameras" data-maxdigits="3" required>
 
 
 
   <label>Locking and security on doors (ACS) Functional</label>
-  <input type="text" id="acsFunctional" data-maxchars="45" required>
+  <input type="text" id="acsFunctional" data-maxchars="41" required>
 
 
 
   <label>Is the perimeter secure?</label>
-  <input type="text" id="perimeterSecure" data-maxchars="60" required>
+  <input type="text" id="perimeterSecure" data-maxchars="57" required>
 </div>
 
 <div class="section">
   <h3>Apartment Inspection</h3>
   <label>Apartment inspection</label>
-  <input type="text" id="apartmentInspection" data-maxchars="60" required>
+  <input type="text" id="apartmentInspection" data-maxchars="57" required>
 
 
 
   <label>Remarks</label>
-  <input type="text" id="apartmentRemark" data-maxchars="75">
+  <input type="text" id="apartmentRemark" data-maxchars="67">
 
 </div>
 
@@ -277,10 +277,10 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
   type="text" data-maxchars="28" required readonly>
   
   <label>S/N</label>
-  <input id="serialNumber" name="serialNumber" type="text" data-maxchars="20" required readonly>
+  <input id="serialNumber" name="serialNumber" type="text" data-maxchars="15" required readonly>
   
   <label>Building security name</label>
-  <input type="text" id="buildingSecurityName" data-maxchars="28" required>
+  <input type="text" id="buildingSecurityName" data-maxchars="18" required>
 
 
 
