--- a/fire.html
+++ b/fire.html
@@ -152,6 +152,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
        </p>
     
     <label>Other Area</label>
+    <div id="otherAreaWrapper" style="display:none;">
     <input type="text" id="Area" data-maxchars="23">
 
     </div>
