--- a/incident.html
+++ b/incident.html
@@ -100,7 +100,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
    <label>Shift</label>
   <select id="shift" name="shift" required>
   <option value="">-- Shift --</option>  
-  <option value="Morning">Morning</option>
+  <option value="Day">Day</option>
   <option value="Night">Night</option>
   </select>
    </div>
