--- a/aqcl.html
+++ b/aqcl.html
@@ -285,7 +285,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 
 
   <label>Security staff number</label>
-  <input type="number" id="securityStaffNumber" data-maxdigits="10" required>
+  <input type="text" id="securityStaffNumber" data-maxdigits="10" required>
 
 
 
