--- a/incident.html
+++ b/incident.html
@@ -50,6 +50,8 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
   <option value="">-- Designation --</option>  
 <option value="Project Manager">Project Manager</option>
 <option value="patrolling supervisor">patrolling supervisor</option>
+<option value="Security Guard">Security Guard</option>
+<option value="Site Supervisor">Site Supervisor</option>
 </select>
 
 
