--- a/incident.html
+++ b/incident.html
@@ -89,7 +89,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 <option value="Stanly 2">Stanly 2</option>
 <option value="Loly 2">Loly 2</option>
 <option value="Matar Qadeem 42 - Victory Old Airport">Matar Qadeem 42 - Victory Old Airport</option>
-<option value="Awqaf 28">wqaf 28</option>
+<option value="Awqaf 28">Awqaf 28</option>
 <option value="Mansoura 106">Mansoura 106</option>
 <option value="Tamara 50">Tamara 50</option>
 <option value="Duhail 52">Duhail 52</option>
