--- a/fire.html
+++ b/fire.html
@@ -43,39 +43,39 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
   <h3>Incident Details</h3>
   <select id="BuildingName" required style="width:100%">
   <<option value="">-- Select Building --</option> 
-  <option value="Muntazah Plaza 140 A& B">Muntazah Plaza 140 A& B</option>
+ <option value="MUNTAZAH PLAZA 140 A& B">MUNTAZAH PLAZA 140 A& B</option>
 <option value="QRIOC">QRIOC</option>
-<option value="QROC - Parking">QROC - Parking</option>
-<option value="Matar Qadeem 38">Matar Qadeem 38</option>
-<option value="Barwa City B1">Barwa City B1</option>
-<option value="Barwa City B2">Barwa City B2</option>
-<option value="Barwa City B3">Barwa City B3</option>
-<option value="Barwa City B4">Barwa City B4</option>
-<option value="Barwa City B5">Barwa City B5</option>
-<option value="Barwa City B6">Barwa City B6</option>
-<option value="Matar Qadeem 26">Matar Qadeem 26</option>
-<option value="Hasan Bilal 28">Hasan Bilal 28</option>
-<option value="Hamda 1">Hamda 1</option>
-<option value="Hamda 2">Hamda 2</option>
-<option value="Hamda 3">Hamda 3</option>
-<option value="Hamda 4">Hamda 4</option>
-<option value="Lazordi - Mansoura 56">Lazordi - Mansoura 56</option>
-<option value="Mushairab 112">Mushairab 112</option>
-<option value="Al Saad 50">Al Saad 50</option>
-<option value="La Falisia (Murekh)">La Falisia (Murekh)</option>
-<option value="Oryx Tower">Oryx Tower</option>
-<option value="Al Maha Pk 2">Al Maha Pk 2</option>
-<option value="Salata 70">Salata 70</option>
-<option value="Fareeda 2">Fareeda 2</option>
-<option value="Fareeda 3">Fareeda 3</option>
-<option value="Stanly 2">Stanly 2</option>
-<option value="Loly 2">Loly 2</option>
-<option value="Matar Qadeem 42 - Victory Old Airport">Matar Qadeem 42 - Victory Old Airport</option>
-<option value="Awqaf 28">Awqaf 28</option>
-<option value="Mansoura 106">Mansoura 106</option>
-<option value="Tamara 50">Tamara 50</option>
-<option value="Duhail 52">Duhail 52</option>
-<option value="Zenon 5">Zenon 5</option>
+<option value="QROC - PARKING">QROC - PARKING</option>
+<option value="MATAR QADEEM 38">MATAR QADEEM 38</option>
+<option value="BARWA CITY B1">BARWA CITY B1</option>
+<option value="BARWA CITY B2">BARWA CITY B2</option>
+<option value="BARWA CITY B3">BARWA CITY B3</option>
+<option value="BARWA CITY B4">BARWA CITY B4</option>
+<option value="BARWA CITY B5">BARWA CITY B5</option>
+<option value="BARWA CITY B6">BARWA CITY B6</option>
+<option value="MATAR QADEEM 26">MATAR QADEEM 26</option>
+<option value="HASAN BILAL 28">HASAN BILAL 28</option>
+<option value="HAMDA 1">HAMDA 1</option>
+<option value="HAMDA 2">HAMDA 2</option>
+<option value="HAMDA 3">HAMDA 3</option>
+<option value="HAMDA 4">HAMDA 4</option>
+<option value="LAZORDI - MANSOURA 56">LAZORDI - MANSOURA 56</option>
+<option value="MUSHAIRAB 112">MUSHAIRAB 112</option>
+<option value="AL SAAD 50">AL SAAD 50</option>
+<option value="LA FALISIA (MUREKH)">LA FALISIA (MUREKH)</option>
+<option value="ORYX TOWER">ORYX TOWER</option>
+<option value="AL MAHA PK 2">AL MAHA PK 2</option>
+<option value="SALATA 70">SALATA 70</option>
+<option value="FAREEDA 2">FAREEDA 2</option>
+<option value="FAREEDA 3">FAREEDA 3</option>
+<option value="STANLY 2">STANLY 2</option>
+<option value="LOLY 2">LOLY 2</option>
+<option value="MATAR QADEEM 42 - VICTORY OLD AIRPORT">MATAR QADEEM 42 - VICTORY OLD AIRPORT</option>
+<option value="AWQAF 28">AWQAF 28</option>
+<option value="MANSOURA 106">MANSOURA 106</option>
+<option value="TAMARA 50">TAMARA 50</option>
+<option value="DUHAIL 52">DUHAIL 52</option>
+<option value="ZENON 5">ZENON 5</option>
   </select>
 
 
