--- a/fire.html
+++ b/fire.html
@@ -299,24 +299,24 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
          <label>Cause of the incident</label>
          <select id="Cause" name="Cause" required style="width:100%">
          <<option value="">-- Select Cause of the incident --</option> 
-         <option value="It was due to Cooking Smoke ">It was due to Cooking Smoke </option>
-<option value="It was due to Unattended Cooking ">It was due to Unattended Cooking </option>
-<option value="It was due to Staff using hair dryer ">It was due to Staff using hair dryer </option>
-<option value="It was due to Steam from washroom ">It was due to Steam from washroom </option>
-<option value="It was due to Steam from ironing ">It was due to Steam from ironing </option>
-<option value="It was due to dust ">It was due to dust </option>
-<option value="It was not confirmed as occupant wasn’t available ">It was not confirmed as occupant wasn’t available </option>
-<option value="It was due to Faulty device ">It was due to Faulty device </option>
-<option value="It was due to using air freshener ">It was due to using air freshener </option>
-<option value="It was due to burning incense ">It was due to burning incense </option>
-<option value="Access denied by occupant (Bedroom) ">Access denied by occupant (Bedroom) </option>
-<option value="It Due to System error ">It Due to System error </option>
-<option value="It was due to High pressure ">It was due to High pressure </option>
-<option value="It was due to Low pressure ">It was due to Low pressure </option>
-<option value="It was due to humidity ">It was due to humidity </option>
-<option value="It was due to moisture in device ">It was due to moisture in device </option>
-<option value="It was due to Staff Smoking  ">It was due to Staff Smoking  </option>
-<option value="It was due to Heat ">It was due to Heat </option>
+         <option value="IT WAS DUE TO COOKING SMOKE ">IT WAS DUE TO COOKING SMOKE</option>
+<option value="IT WAS DUE TO UNATTENDED COOKING ">IT WAS DUE TO UNATTENDED COOKING</option>
+<option value="IT WAS DUE TO STAFF USING HAIR DRYER ">IT WAS DUE TO STAFF USING HAIR DRYER</option>
+<option value="IT WAS DUE TO STEAM FROM WASHROOM ">IT WAS DUE TO STEAM FROM WASHROOM</option>
+<option value="IT WAS DUE TO STEAM FROM IRONING ">IT WAS DUE TO STEAM FROM IRONING</option>
+<option value="IT WAS DUE TO DUST ">IT WAS DUE TO DUST </option>
+<option value="IT WAS NOT CONFIRMED AS OCCUPANT WASN’T AVAILABLE ">IT WAS NOT CONFIRMED AS OCCUPANT WASN’T AVAILABLE</option>
+<option value="IT WAS DUE TO FAULTY DEVICE ">IT WAS DUE TO FAULTY DEVICE </option>
+<option value="IT WAS DUE TO USING AIR FRESHENER ">IT WAS DUE TO USING AIR FRESHENER</option>
+<option value="IT WAS DUE TO BURNING INCENSE ">IT WAS DUE TO BURNING INCENSE</option>
+<option value="ACCESS DENIED BY OCCUPANT (BEDROOM) ">ACCESS DENIED BY OCCUPANT (BEDROOM)</option>
+<option value="IT DUE TO SYSTEM ERROR ">IT DUE TO SYSTEM ERROR</option>
+<option value="IT WAS DUE TO HIGH PRESSURE ">IT WAS DUE TO HIGH PRESSURE </option>
+<option value="IT WAS DUE TO LOW PRESSURE ">IT WAS DUE TO LOW PRESSURE</option>
+<option value="IT WAS DUE TO HUMIDITY ">IT WAS DUE TO HUMIDITY</option>
+<option value="IT WAS DUE TO MOISTURE IN DEVICE ">IT WAS DUE TO MOISTURE IN DEVICE </option>
+<option value="IT WAS DUE TO STAFF SMOKING  ">IT WAS DUE TO STAFF SMOKING</option>
+<option value="IT WAS DUE TO HEAT ">IT WAS DUE TO HEAT</option>
 <option value="Others">Others</option>
            </select>
          <input type="text" id="OtherCause" placeholder="Specify Cuase Of Incident" style="display:none;" data-maxchars="54">
