--- a/fire.html
+++ b/fire.html
@@ -317,7 +317,7 @@ if (sessionStorage.getItem("LOGGED_IN") !== "YES") {
 <option value="IT WAS DUE TO MOISTURE IN DEVICE ">IT WAS DUE TO MOISTURE IN DEVICE </option>
 <option value="IT WAS DUE TO STAFF SMOKING  ">IT WAS DUE TO STAFF SMOKING</option>
 <option value="IT WAS DUE TO HEAT ">IT WAS DUE TO HEAT</option>
-<option value="Others">Others</option>
+<option value="OTHERS">OTHERS</option>
            </select>
          <input type="text" id="OtherCause" placeholder="Specify Cuase Of Incident" style="display:none;" data-maxchars="54">
 
